Simplify RestHandler to pass all routes through routes()